--- a/props/Movie Card and olor picker/src/components/colorCard.css
+++ b/props/Movie Card and olor picker/src/components/colorCard.css
@@ -3,8 +3,8 @@
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 2rem;
-    gap: 3rem
-    ;
+    gap: 3rem ;
+    text-align: center;
   }
   
   
